--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,162 @@ button:hover{
   border: 2px solid darkgoldenrod;
   cursor: pointer;
 }
+
+.service{
+  background: #06162D;
+  width: 100%;
+  padding: 100px 0px;
+}
+
+.title h2{
+  color: white;
+  font-size: 75px;
+  width: 1130px;
+  margin: 30px auto;
+  text-align: center;
+}
+
+.box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 400px;
+}
+
+.card{
+  height: 365px;
+  width: 335px;
+  padding: 20px 35px;
+  background: #06163D;
+  border-radius: 20px;
+  margin: 15px;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+
+.card i{
+  font-size: 50px;
+  display: block;
+  text-align: center;
+  margin: 25px 0px;
+  color: darkgoldenrod;
+}
+
+h5{
+  color: white;
+  font-size: 23px;
+  margin-bottom: 15px;
+}
+
+.pra p{
+  color: white;
+  font-size: 16px;
+  line-height: 27px;
+  margin-bottom: 25px;
+}
+
+.card .button{
+  background-color: darkgoldenrod;
+  color: black;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 22px;
+  border-radius: 30px;
+  transition: .4s;
+
+}
+
+.card .button:hover{
+  background-color: transparent;
+  color: white;
+  border: 2px solid darkgoldenrod;
+  cursor: pointer;
+}
+
+.contact-me{
+  width: 100%;
+  height: 290px;
+  background:  #F7F7F7;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact-me p{
+  color: #000;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+
+.contact-me .button-two{
+  background-color: darkgoldenrod;
+  color: black;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 13px 30px;
+  border-radius: 30px;
+  transition: .4s;
+
+}
+
+.contact-me .button-two:hover{
+  background-color: transparent;
+  border: 2px solid darkgoldenrod;
+  cursor: pointer;
+}
+
+footer{
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background: #06163D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer p:nth-child(1){
+  font-size: 30px;
+  color: white;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+footer p:nth-child(2){
+  font-size: 17px;
+  color: white;
+  width: 500px;
+  text-align: center;
+  line-height: 26px;
+}
+
+.socials{
+  display: flex;
+}
+
+.socials a{
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: darkgoldenrod;
+  border-radius: 50%;
+  margin: 22px 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+
+}
+
+.socials a:hover{
+  transform: scale(1.3);
+  transition: .3s;
+}
+
