--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,24 @@
 
 }
 
+.header-links{
+  height: 20vh;
+  width: 100%;
+  
+  color: darkgoldenrod;
+  background-color: #F7F7F7;
+  
+ 
+  padding-left: 5%;
+  padding-right: 5%;
+ 
+}
+
+.header-links h2{
+  color: #000;
+}
+
+
 .intro{
   height: 100vh;
   width: 100%;
@@ -38,11 +56,11 @@ span{
 nav ul li{
   list-style-type: none;
   display: inline-block;
-  padding: 10px;
+  padding: 20px;
 }
 
 nav ul li a{
-  color: white;
+  color: black;
   text-decoration: none;
   font-weight: bold;
   text-transform: capitalize;
@@ -52,6 +70,8 @@ nav ul li a:hover{
   background-color: darkgoldenrod;
   color: white;
   transition: .4s;
+  padding: 5px 15px;
+  border-radius: 30px;
 }
 
 
@@ -148,6 +168,9 @@ h4{
   display: flex;
   align-items: center;
   justify-content: space-around;
+}
+.main h5{
+  color: #000;
 }
 
 .about-text h2{
