--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,29 @@
 *{
-  padding: 0;
-  margin: 0;
   font-family: 'Josefin Sans', sans-serif;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 
 }
 
+body{
+  width: 100%;
+  height: 100%;
+
+  overflow-x: hidden;
+}
+
 .header-links{
-  height: 150px;
+
   width: 100%;
   color: darkgoldenrod;
   background-color: #F7F7F7;
-  padding-left: 5%;
-  padding-right: 5%;
- 
+  padding-left: 5rem;
+  padding-right: 10rem;
+
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
 }
 
 .header-links h2{
@@ -22,52 +32,50 @@
 
 
 .intro{
-  height: 100vh;
+  height: 50rem;
   width: 100%;
   background-image: url(../img/background.jpeg);
   background-size: cover;
-  background-position: center;
+  background-position: center center;
 }
 
-nav{
-  display: flex;
-  align-items:center;
-  justify-content: space-between;
-  padding-top: 45px;
-  padding-left: 8%;
-  padding-right: 8%;
-
+.content{
+  position: relative;
+  top: 20rem;
+  left: 5rem;
+  width: 100%;
+  /* transform: translateY(-50%); */
 }
 
 .logo{
   color: white;
-  font-size: 35px;
+  font-size: 500%;
   letter-spacing: 1px;
-  cursor: pointer;
 }
 
 span{
   color:darkgoldenrod;
 }
 
-nav ul li{
+.header-links ul li{
   list-style-type: none;
   display: inline-block;
   padding: 20px;
 }
 
-nav ul li a{
+.header-links ul li a{
   color: black;
   text-decoration: none;
   font-weight: bold;
+  padding: 1rem 1rem;
   text-transform: capitalize;
 }
 
-nav ul li a:hover{
+.header-links ul li a:hover{
   background-color: darkgoldenrod;
   color: white;
   transition: .4s;
-  padding: 5px 15px;
+  padding: 1rem 1rem;
   border-radius: 30px;
 }
 
@@ -78,8 +86,8 @@ nav ul li a:hover{
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
-  padding: 10px 25px;
-  border-radius: 30px;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
   transition: transform .4s;
 
 }
@@ -88,108 +96,72 @@ nav ul li a:hover{
   transform: scale(1.2);
 }
 
-.content{
-  position: absolute;
-  top: 50%;
-  left: 8%;
-  transform: translateY(-50%);
-}
+
 
 h1{
   color: white;
-  margin: 20px 0px 20px;
-  font-size: 75px;
+  margin: 2rem 0px 2rem;
+  font-size: 400%;
 }
 
 h3{
   color:white;
-  font-size: 25px;
+  font-size: 2.5rem;
   margin-bottom: 50px;
 }
 
 h4{
   color: crimson;
   letter-spacing: 2px;
-  font-size: 20px;
-}
-
-.newsletter form{
-  width: 380px;
-  max-width: 100%;
-  position: relative;
-}
-
-.newsletter form input:first-child{
-  display: inline-block;
-  width: 100%;
-  padding: 14px 130px 14px 15px;
-  border: 2px solid darkgoldenrod;
-  outline: none;
-  border-radius: 30px;
-}
-
-.newsletter form input:last-child{
-  position: absolute;
-  display: inline-block;
-  outline: none;
-  border: none;
-  padding: 10px 30px;
-  border-radius: 30px;
-  background-color: darkgoldenrod;
-  color: white;
-  box-shadow: 0px 0px 5px #000, 0px 0pc 15px #858585;
-  top: 6px;
-  right: 6px;
-
+  font-size: 2rem;
 }
 
 .about{
   width: 100%;
-  padding: 100px 0px;
+  padding: 5rem 0px;
   background-color: #F7F7F7;
-}
-
-.about img{
-  height: auto;
-  width: 430px;
-}
-
-.about-text{
-  width:550px;
-}
-
-.main{
-  width: 1130px;
-  max-width: 95%;
-  margin: 0 auto;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-around;
 }
-.main h5{
+
+
+.about img{
+  padding: 10rem;
+  width: 50rem;
+}
+
+.about-text{
+  width:50%;
+}
+
+
+.about h5{
   color: #000;
 }
 
 .about-text h2{
-  font-size: 75px;
+  font-size: 6rem;
   text-transform: capitalize;
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 
 }
 
 .about-text h5{
   letter-spacing: 2px;
-  font-size: 22px;
+  font-size: 1.5rem;
   text-transform: capitalize;
-  margin-bottom: 25px;
+  margin-bottom: 2rem;
 
 }
 
 .about-text p{
   letter-spacing: 1px;
-  line-height: 28px;
-  font-size: 18px;
-  margin-bottom: 45px;
+  line-height: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 4rem;
+  margin-right: 10rem;
 
 }
 
@@ -199,8 +171,8 @@ button{
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
-  padding: 13px 30px;
-  border-radius: 30px;
+  padding: 1rem 3rem;
+  border-radius: 2.5rem;
   transition: .4s;
 }
 
@@ -213,14 +185,13 @@ button:hover{
 .service{
   background: #06162D;
   width: 100%;
-  padding: 100px 0px;
+  padding: 5%;
 }
 
 .title h2{
   color: white;
-  font-size: 75px;
-  width: 1130px;
-  margin: 30px auto;
+  font-size: 6rem;
+  margin: 3rem ;
   text-align: center;
 }
 
@@ -228,40 +199,44 @@ button:hover{
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 400px;
+
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card{
-  height: 365px;
-  width: 335px;
+  height: fit-content;
+  width: 25%;
   padding: 20px 35px;
   background: #06163D;
-  border-radius: 20px;
-  margin: 15px;
+  border-radius: 2rem;
+  margin: 1rem;
   position: relative;
   overflow: hidden;
   text-align: center;
 }
 
 .card i{
-  font-size: 50px;
+  font-size: 4rem;
   display: block;
   text-align: center;
-  margin: 25px 0px;
+  margin: 2rem 0px;
   color: darkgoldenrod;
 }
 
 h5{
   color: white;
-  font-size: 23px;
-  margin-bottom: 15px;
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 .pra p{
   color: white;
-  font-size: 16px;
-  line-height: 27px;
-  margin-bottom: 25px;
+  font-size: 1rem;
+  line-height: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
 .card .button{
@@ -270,8 +245,8 @@ h5{
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
-  padding: 9px 22px;
-  border-radius: 30px;
+  padding: 0.5rem 2rem;
+  border-radius: 2.5rem;
   transition: .4s;
 
 }
@@ -285,7 +260,7 @@ h5{
 
 .contact-me{
   width: 100%;
-  height: 290px;
+  height: 20rem;
   background:  #F7F7F7;
   display: flex;
   align-items: center;
@@ -295,9 +270,9 @@ h5{
 
 .contact-me p{
   color: #000;
-  font-size: 30px;
+  font-size: 150%;
   font-weight: bold;
-  margin-bottom: 25px;
+  margin-bottom: 2rem;
 }
 
 .contact-me .button-two{
@@ -306,8 +281,8 @@ h5{
   text-decoration: none;
   border: 2px solid transparent;
   font-weight: bold;
-  padding: 13px 30px;
-  border-radius: 30px;
+  padding: 1rem 2.5rem;
+  border-radius: 3rem;
   transition: .4s;
 
 }
@@ -321,7 +296,7 @@ h5{
 footer{
   position: relative;
   width: 100%;
-  height: 400px;
+  padding-top: 2rem;
   background: #06163D;
   display: flex;
   flex-direction: column;
@@ -330,18 +305,18 @@ footer{
 }
 
 footer p:nth-child(1){
-  font-size: 30px;
+  font-size: 2rem;
   color: white;
   margin-bottom: 20px;
   font-weight: bold;
 }
 
 footer p:nth-child(2){
-  font-size: 17px;
+  font-size: 1rem;
   color: white;
-  width: 500px;
+  width: 45rem;
   text-align: center;
-  line-height: 26px;
+  line-height: 2rem;
 }
 
 .socials{
@@ -349,17 +324,17 @@ footer p:nth-child(2){
 }
 
 .socials a{
-  width: 45px;
-  height: 45px;
+  width: 4rem;
+  height: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
   background: darkgoldenrod;
   border-radius: 50%;
-  margin: 22px 10px;
+  margin: 2rem 0.5rem;
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 2rem;
 
 }
 
@@ -368,3 +343,36 @@ footer p:nth-child(2){
   transition: .3s;
 }
 
+
+
+@media only screen and (max-width: 600px) {
+  .about{
+    flex-direction: column;
+  }
+
+  .about-text p{
+    letter-spacing: 1px;
+    line-height: 2rem;
+    font-size: 1.5rem;
+    margin-bottom: 4rem;
+    margin-right: 10%;
+    margin-right: 10%;
+  
+  }
+
+  .box{
+    flex-direction: column;
+  }
+
+  .card{
+    width: 80%;
+  }
+  
+  .header-links .btn{
+    opacity: 0;
+  }
+
+  .header-links ul{
+    opacity: 0;
+  }
+}
